kubernetes/apps/argocd/namespace.yaml
# Kubernetes namespace called networking
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
