kubernetes/apps/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
  namespace: argocd
  annotations:
    cert-manager.io/issuer: ca-issuer
    argocd.argoproj.io/sync-wave: "3"

spec:
  ingressClassName: nginx #cilium
  rules:
  - host: argocd.ashman.world
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
  tls:
  - hosts:
    - argocd.ashman.world
    secretName: arg-secret
